menu z-index fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -64,6 +64,7 @@ html{
 	top: 0;
 	right: 10px;
 	opacity: 0.9;
+	z-index: 10000;
 }
 
 #menu li{
